# prof-viewer

./: .gitignore  Cargo.toml  TODO.md  Trunk.toml  index.html  legion_prof_viewer-fb5968a67b60775b.js  legion_prof_viewer-fb5968a67b60775b_bg.wasm
src/: app.rs  data.rs  deferred_data.rs  lib.rs  logging.rs  main.rs  random_data_source.rs  search.rs  temp.rs  timestamp.rs
src/http/: client.rs  fetch.rs  fetch_native.rs  fetch_web.rs  mod.rs  queueclient.rs  schema.rs  server.rs
src/queue/: mod.rs  queue.rs  stamp.rs
