[package]
name = "legion_prof_viewer"
version = "0.1.0"
authors = ["Elliott Slaughter <slaughter@cs.stanford.edu>"]
edition = "2021"
rust-version = "1.65"

[features]
default = []
client = []
server = ["dep:actix-web", "dep:env_logger", "dep:actix-cors"]


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

serde = { version = "1", features = ["derive"] }

rand = { version = "0.8" }
# transitive depedency, required for rand to support wasm
getrandom = { version = "0.2", features = ["js"] }
aho-corasick = "0.7.20"
actix-web = {version = "4", optional = true}
env_logger = {version = "0.10.0", optional = true}
# actix-web = "4"
# env_logger = "0.10.0"
reqwest = { version = "0.11", features = [ "json", "gzip", "brotli"] }
ehttp = "0.2.0"
serde_json = "1.0.95"
wasm-bindgen = "0.2.84"
js-sys = "0.3.40"
wasm-bindgen-futures = "0.4"
actix-cors = { version = "0.6.4", optional = true}
url = "2.3.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Location'
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
